<resources>
    <string name="app_name">Heat</string>
    <string name="app_name_long">Heat Index</string>
    <string name="tempUnit">&#xb0;F</string>
    <string name="humidityUnit">%</string>
    <string name="action_settings">Settings</string>
    <string name="labelForNow">Now</string>
    <string name="labelForMax">Today\'s Max</string>
    <string name="labelForCalculated">Calculated</string>
    <string name="labelForFeelsLike">Feels Like </string>
    <string name="txtForLowerRisk">Lower Risk\n(Use Caution)</string>
    <string name="txtForModerateRisk">Moderate Risk</string>
    <string name="txtForHighRisk">High Risk</string>
    <string name="txtForVeryHightoExtremeRisk">Very High to\nExtreme Risk</string>
    <string name="txtForCurrentMinimalRisk">Minimal Risk\nFrom Heat</string>
    <string name="txtForTitlePrecautions">Precautions</string>
    <string name="txtForTitleMoreInfo">More Info</string>
    <string name="txtForMoreInfoSigns">&#160;&#160;Signs and Symptoms</string>
    <string name="txtForMoreInfoFirstAid">&#160;&#160;First Aid</string>
    <string name="txtForMoreInfoDetails">&#160;&#160;More Details</string>
    <string name="txtForMoreInfoContact">&#160;&#160;Contact OSHA</string>
    <string name="txtForMoreInfoAbout">&#160;&#160;About this App</string>
    <string name="txtTemperature">degrees Fahrenheit Temperature</string>
    <string name="txtHumidity">percent Humidity</string>
    <string name="btnBottomMenuBack"> &#171; Back</string>
    <string name="btnBottomMenuMainmenu">More Info</string>
    <string name="btnBottomMenuHome">Home</string>
    <string name="btnBack">	&#171; Back</string>
    <string name="txtForManualData">Manual Data</string>
    <string name="location">Location</string>
    <string name="txtForAt">At</string>
    <string name="done">Done</string>
    <string name="dol">U.S. Department of Labor</string>
    <string name="txtNotFound">Not Found</string>
    <string name="txtHeatIndexUpdated">Heat Index Information Updated!</string>
    <string name="txtAddressNotFound">We cannot find the address you entered. Please verify it.</string>
    <string name="txtNotification">Notification</string>
    <string name="txtNOAADataNotAvailable">The NOAA weather data are currently not available, please enter your temperature and relative humidity manually.</string>
    <string name="noticeButton">Upgrade App</string>
    <string name="noticeTitle">Notice</string>
    <string name="noticeText">An updated version of this app is available from the Centers for Disease Control and Prevention (CDC).\n\nPlease delete and replace this app by September 30, 2017.\n</string>
</resources>
